Overflow Fix

--- a/css/v1.css
+++ b/css/v1.css
@@ -585,6 +585,8 @@ a {
 }
 
 #annoCell-content {
+	overflow-y: auto;
+	overflow-x: hidden;
 	text-align: center;
 	font-family: Lane;
 	font-weight: bold;
